--- a/src/Layout/Content/Report/Graphs/graphs.less
+++ b/src/Layout/Content/Report/Graphs/graphs.less
@@ -52,6 +52,7 @@
 .cols {
     height: 200px;
     display: flex;
+    align-items: flex-end;
 
     &_col {
         background-color: #ffdfaa;
@@ -61,6 +62,8 @@
             background-image: linear-gradient(to bottom, #ffd299, #ff9b1c);
             cursor: pointer;
         }
+
+        height: 0;
     }
 
     &__week &_col {
