--- a/src/Layout/Navigation/navigation.less
+++ b/src/Layout/Navigation/navigation.less
@@ -53,9 +53,14 @@
             background-position-y: -450px;
         }
 
+        &:hover {
+            background-color: rgba(147, 186, 71,0.25);
+        }
+
         &.-active {
-            background-color: #93ba47;
+            background-color: #93ba47 !important;
             color: #ffffff;
         }
+
     }
 }
