--- a/src/Layout/Content/Report/Notifications/notifications.less
+++ b/src/Layout/Content/Report/Notifications/notifications.less
@@ -1,5 +1,5 @@
 .notifications {
-    margin: 0 0 30px 0;
+    margin: 0 0 35px 0;
 
     &_title {
         margin: 0 0 25px 0;
@@ -8,12 +8,15 @@
     &_item {
         line-height: 23px;
         margin: 0 0 18px 0;
+        position: relative;
 
         &:before {
             content: "";
             font-family: "Icons";
             color: #f5a623;
-            margin: 0 4px 0 0;
+            position: absolute;
+            left: -18px;
+            top: -1px;
         }
     }
 }
