Облагородил список чеков, прикрутил ещё пачку методов с вейкового api, подкрутил чуток логику поведения

--- a/src/Layout/Content/content.less
+++ b/src/Layout/Content/content.less
@@ -1,6 +1,6 @@
 .content {
   background: #ffffff;
-  padding: 45px;
+  padding: 40px 45px;
   box-sizing: border-box;
   width: 100%;
   position: relative;
