--- a/src/common.less
+++ b/src/common.less
@@ -42,14 +42,13 @@ a {
     color: #2270b8;
     text-decoration: none;
 
-    //border-bottom: solid 1px rgba(6, 106, 161, 0);
-    //transition: border 0.2s ease-in;
-    //&:hover {
-    //    border-bottom-color: rgba(6, 106, 161, 0.75);
-    //}
+    border-bottom: solid 1px rgba(6, 106, 161, 0);
+    transition: border 0.1s ease-in;
+
     &.link:hover {
-        text-decoration: underline;
+        border-bottom-color: rgba(6, 106, 161, 0.75);
     }
+
 }
 
 .c-wrapper {
@@ -125,4 +124,41 @@ a {
     &__error {
         color: #d0021b;
     }
+}
+
+.lightPage {
+
+    position: relative;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+
+    margin: 0 -30px;
+    padding: 30px;
+
+    &_close {
+        position:absolute;
+        width: 26px;
+        height: 26px;
+        top: 25px;
+        right: 15px;
+        line-height: 0;
+        overflow: hidden;
+        opacity: 0.4;
+        cursor: pointer;
+
+        transition: opacity 0.3s ease-in;
+
+        &:hover {
+            opacity: 0.8;
+        }
+
+        &:before {
+            content: "×";
+            font-size: 37px;
+            top: 9px;
+            left: 1px;
+            position: relative;
+            font-weight: 300;
+        }
+    }
+
 }
