--- a/src/Layout/Content/Statistics/statistics.less
+++ b/src/Layout/Content/Statistics/statistics.less
@@ -1,6 +1,9 @@
 .statistics {
+
+    height: 100%;
+
     &_filters {
-        margin: 15px 0;
+        margin: 30px 0;
         display: flex;
 
         > div {
@@ -66,5 +69,9 @@
 
     tbody tr:last-child td {
         border: none;
+    }
+
+    &_perSalesPoint {
+        display: flex;
     }
 }
