--- a/src/common.less
+++ b/src/common.less
@@ -38,6 +38,10 @@ h4 {
   font-weight: 600;
 }
 
+p {
+    margin-top: 0;
+}
+
 a {
     color: #2270b8;
     text-decoration: none;
@@ -65,7 +69,7 @@ a {
     border-left: none;
     border-bottom: none;
     position: relative;
-    margin: 35px -25px -45px -45px;
+    margin: 40px -25px -40px -45px;
 
     box-shadow: 2px 0 2px 0 rgba(0,0,0,0.05);
 
@@ -73,7 +77,7 @@ a {
 
     &_back {
         position: absolute;
-        top: -36px;
+        top: -41px;
         padding: 0 45px;
     }
 
@@ -115,7 +119,8 @@ a {
     }
 
     &_content {
-        padding: 45px;
+        padding: 40px 45px;
+        min-height: 289px;
     }
 }
 
@@ -124,41 +129,4 @@ a {
     &__error {
         color: #d0021b;
     }
-}
-
-.lightPage {
-
-    position: relative;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
-
-    margin: 0 -30px;
-    padding: 30px;
-
-    &_close {
-        position:absolute;
-        width: 26px;
-        height: 26px;
-        top: 25px;
-        right: 15px;
-        line-height: 0;
-        overflow: hidden;
-        opacity: 0.4;
-        cursor: pointer;
-
-        transition: opacity 0.3s ease-in;
-
-        &:hover {
-            opacity: 0.8;
-        }
-
-        &:before {
-            content: "×";
-            font-size: 37px;
-            top: 9px;
-            left: 1px;
-            position: relative;
-            font-weight: 300;
-        }
-    }
-
 }
