--- a/src/Layout/Content/CashReceipts/cashreceipts.less
+++ b/src/Layout/Content/CashReceipts/cashreceipts.less
@@ -59,9 +59,12 @@
             padding-left: 0;
         }
 
-        &:nth-child(2) {
+        &:nth-child(2),
+        &:nth-child(3) {
             text-align: right;
         }
+
+        //outline: solid 1px #c94a4a;
     }
 
     tbody {
@@ -76,6 +79,7 @@
             width: 100px;
             right: -110px;
             font-style: italic;
+            text-align: left;
         }
     }
 
