--- a/src/common.less
+++ b/src/common.less
@@ -49,6 +49,8 @@ a {
     border-bottom: solid 1px rgba(6, 106, 161, 0);
     transition: border 0.1s ease-in;
 
+    cursor: pointer;
+
     &.link:hover {
         border-bottom-color: rgba(6, 106, 161, 0.5);
     }
