--- a/src/Layout/Content/CashReceipts/CashReceiptViewer/cashreceipt.less
+++ b/src/Layout/Content/CashReceipts/CashReceiptViewer/cashreceipt.less
@@ -19,6 +19,7 @@
 
     &_header {
         text-align: center;
+        line-height: 25px;
     }
     &_title {
         font-size: 19px;
@@ -26,7 +27,7 @@
     }
 
     &_list {
-        margin: 10px 0;
+        margin: 15px 0;
         counter-reset: list;
     }
 
@@ -71,12 +72,12 @@
     }
 
     &_time {
-
+        line-height: 25px;
     }
 
     &_total {
         font-size: 18px;
-        margin: 20px 0 10px 0;
+        margin: 30px 0;
 
         div {
             display: flex;
@@ -94,6 +95,7 @@
     }
 
     &_footer {
+        line-height: 25px;
         div {
             display: flex;
             white-space: nowrap;
@@ -104,6 +106,11 @@
         }
     }
 
+    &_thanks {
+        text-align: center;
+        font-weight: 600;
+        margin: 20px 0;
+    }
 
 
     &_close {
