--- a/src/common.less
+++ b/src/common.less
@@ -2,7 +2,7 @@
 
 html,
 body {
-    //height: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -15,6 +15,13 @@ body {
     overflow: auto;
     overflow-y: scroll;
     -webkit-font-smoothing: antialiased;
+}
+
+#root {
+    overflow: hidden;
+    padding: 70px 0;
+    box-sizing: border-box;
+    min-height: 100%;
 }
 
 h1, h2, h3, h4 {
