--- a/src/Layout/Content/CashReceipts/CashReceiptViewer/cashreceipt.less
+++ b/src/Layout/Content/CashReceipts/CashReceiptViewer/cashreceipt.less
@@ -7,7 +7,6 @@
     right: 0;
     width: 500px;
 
-    padding: 50px;
     background: #ffffff;
     box-shadow: -4px 2px 4px 0 rgba(128, 128, 128, 0.1);
     border-left: solid 1px #e3e3e3;
@@ -17,10 +16,16 @@
 
     box-sizing: border-box;
 
+    &_content {
+        padding: 40px 45px;
+        box-sizing: border-box;
+    }
+
     &_header {
         text-align: center;
         line-height: 25px;
     }
+
     &_title {
         font-size: 19px;
         margin: 0 0 5px 0;
@@ -109,7 +114,7 @@
     &_thanks {
         text-align: center;
         font-weight: 600;
-        margin: 20px 0;
+        margin: 20px 0 0 0;
     }
 
 
