--- a/src/Layout/Content/Statistics/statistics.less
+++ b/src/Layout/Content/Statistics/statistics.less
@@ -28,6 +28,8 @@
         margin: 0 0 70px 0;
         font-size: 21px;
         font-weight: 300;
+        position: relative;
+        z-index: 2;
 
         &:last-child {
             margin: 0;
