поиск по номеру чека

--- a/src/Layout/Content/CashReceipts/cashreceipts.less
+++ b/src/Layout/Content/CashReceipts/cashreceipts.less
@@ -37,6 +37,10 @@
             margin: 0 5px;
         }
 
+        &_number {
+            margin: 0 5px 0 0;
+        }
+
         &_returns {
             margin: -5px 0 0 0;
             position: relative;
