--- a/src/Layout/Content/Report/Graphs/graphs.less
+++ b/src/Layout/Content/Report/Graphs/graphs.less
@@ -67,6 +67,8 @@
         position: relative;
         border-right: solid 1px rgba(255, 255, 255, 0.25);
 
+        flex-basis: 100%;
+
         a {
             display: block;
             height: 100%;
