пропихнул в роутинг organizationId

--- a/src/Layout/Navigation/navigation.less
+++ b/src/Layout/Navigation/navigation.less
@@ -3,6 +3,8 @@
     background: #daefb2;
     width: 100px;
     font-size: 16px;
+    position: relative;
+    margin: 0 0 0 -1px;
 
     &_list {
         width: 100px;
