--- a/src/common.less
+++ b/src/common.less
@@ -139,3 +139,12 @@ a {
         color: #d0021b;
     }
 }
+
+[class*="Loader-loader"] {
+    &:after {
+        z-index: 2 !important;
+    }
+}
+[class*="Loader-spinnerContainer"] {
+    z-index: 3 !important;
+}
